Add Basic Auth protection for Web UI endpoints
Introduced optional Basic Auth middleware to protect the Web UI and management endpoints using the KIRO_UI_PASSWORD environment variable. Updated documentation and example environment file to reflect the new configuration option.

--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,9 @@ PORT=8080
 # API认证密钥（默认: 123456）
 KIRO_CLIENT_TOKEN=123456
 
+# Web 管理界面访问密码（可选，启用后需浏览器 Basic Auth）
+# KIRO_UI_PASSWORD=your-ui-password
+
 # Gin运行模式: debug, release, test（默认: release）
 GIN_MODE=release
 
