Add configurable machine ID binding file path
Introduces the MACHINE_ID_BINDING_FILE environment variable to specify the path for machine ID bindings. If not set, the path defaults to the same directory as OAUTH_TOKEN_FILE if available, or to 'machine_id_bindings.json'. Updates .env.example and logs the resolved file path.

--- a/.env.example
+++ b/.env.example
@@ -125,6 +125,10 @@ OAUTH_ENABLED=true
 # OAuth Token 存储文件路径（默认: ./oauth_tokens.json）
 # OAUTH_TOKEN_FILE=./oauth_tokens.json
 #
+# 机器码绑定文件路径（可选，用于持久化存储）
+# 如果未设置但设置了 OAUTH_TOKEN_FILE，将自动使用相同目录
+# MACHINE_ID_BINDING_FILE=/app/data/machine_id_bindings.json
+#
 # 使用方法：
 # 1. 设置 OAUTH_ENABLED=true
 # 2. 部署到云平台后访问 /oauth 页面
