Add model access control and model resolver
Introduce account-level model access control and model resolver logic. Add config flags (MODEL_ACCESS_CONTROL_ENABLED, MODEL_ACCESS_UNKNOWN_ALLOWED) and .env.example entries. New config/model_resolver.go provides model normalization, resolution and a canonical request model list. Add auth/model_access.go to detect account level from usage and determine allowed models; integrate this into TokenManager and SessionTokenPool so token selection, session binding and allocation become model-aware (new APIs: GetTokenForModel, GetTokenWithFingerprintForModel, GetTokenWithFingerprintForSessionAndModel, TryAllocateBackupTokenForModel, etc.). Token cache now stores detected AccountLevel and token selection will return a ModelNotFoundError when no account supports the requested model. CalculateAvailableCount now includes bonus quotas. converter/codewhisperer.go now normalizes model aliases, extracts session IDs from metadata to improve session continuity, and adjusts tool/result handling. Add tests for model resolver, model access, token selection and usage calculations. Misc: small struct formatting tweaks and added helper functions to propagate model restrictions across the stack.

--- a/.env.example
+++ b/.env.example
@@ -262,6 +262,17 @@ SESSION_POOL_COOLDOWN=60s
 SESSION_POOL_RETRY_INTERVAL=100ms
 
 # ============================================================================
+# 账号等级与模型访问控制
+# ============================================================================
+#
+# 是否启用按账号等级限制模型访问（默认: true）
+# MODEL_ACCESS_CONTROL_ENABLED=true
+#
+# 当账号等级无法识别时是否允许全部模型（默认: true）
+# 建议先保持 true，稳定后再考虑设为 false 做严格限制
+# MODEL_ACCESS_UNKNOWN_ALLOWED=true
+
+# ============================================================================
 # 工具限制配置
 # ============================================================================
 #
